--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     .todo-container {
       width: 400px;
-      background-color: #ffffff;
+      background-color: #0000FF;
       border-radius: 8px;
       box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
       padding: 20px;
